syntax = "proto3";
package netty;
option java_package="com.beebank.java.protobuf";
option java_outer_classname="SubscribeRespProto";

message SubscribeRespProtoTest {
	int32 subReqId = 1;
	int32 resCode= 2;
	string desc = 3;
}