syntax = "proto3";
package netty;
option java_package = "com.beebank.java.protobuf";
option java_outer_classname= "SubscriptReqProto";

message SubscriptReq{
	int32 subreqID = 1;
	string userName = 2;
	string productName = 3;
	string address = 4;
}